# Xunihuanzhe

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  start.bat  交付说明.md
.github/workflows/: cd.yml  ci.yml
backend/: auth.py  config.py  database.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  schemas.py
backend/cases/: case1.json  case2.json  case3.json  case4.json  case5.json
backend/migrations/: env.py
backend/migrations/versions/: a3512635829c_initial_schema.py  b2c3d4e5f6g7_add_scoring_status.py  c3d4e5f6g7h8_add_llm_call_logs.py  d4e5f6g7h8i9_add_rubric_fields.py  e5f6g7h8i9j0_add_score_review.py
backend/routers/: admin.py  auth.py  cases.py  chat.py  export.py  notes.py  qa.py  stats.py  training.py
backend/rubrics/: __init__.py  nursing_history_v1.json
backend/services/: llm_logging.py  llm_service.py  patient_guard.py  scoring.py
backend/tests/: test_admin.py  test_auth.py  test_cases.py  test_training.py
docs/: 01-architecture.md  02-api-reference.md  03-database.md  04-frontend.md  05-llm-design.md  06-dev-log.md  07-startup-guide.md  08-polish-handoff.md  README.md
docs/superpowers/plans/: 2026-05-28-backend-renovation.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
留言板/: AI并发稳定性优化留言板.md  AI开发留言板.md  AI数据安全与生产运维留言板.md  AI模型调用监控后台模块留言板.md  AI界面商业级优化留言板.md  AI评分可信度与教学质量优化留言板.md  AI速度优化留言板.md  学生端教师端商业级布局优化补充留言板.md  患者角色稳定性优化留言板.md  调用监控按训练聚合优化留言板.md
(+22 files in other folders)
